force-app/main/default/objects/Email_Bot_Setting__mdt/Email_Bot_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for the email bot</description>
    <label>Email Bot Setting</label>
    <pluralLabel>Email Bot Settings</pluralLabel>
</CustomObject>