force-app/main/default/objects/Email_Bot_Setting__mdt/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>