force-app/main/default/objects/Email_Bot_Setting__mdt/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>