force-app/main/default/objects/Email_Bot_Setting__mdt/fields/NER_Model_ID__c.field-meta.xml
<CustomField>
    <fullName>NER_Model_ID__c</fullName>
    <label>NER Model ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>