force-app/main/default/objects/Email_Bot_Setting__mdt/fields/Support_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Support_Queue_ID__c</fullName>
    <label>Support Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>